--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "jest": "^27.5.1",
-    "paper-js-dom": "^0.12.15"
+    "paper-jsdom-canvas": "^0.12.15"
   }
 }
